--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.4.1"
+pytest-cov = "^2.8.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
