--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
-name = "pyconf"
+name = "myopy"
 version = "0.1.0"
-description = "pyconf, configuration files in python, easy peasy."
+description = "myopy, run blind python files."
 authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
 license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/loiccoyle/myopy"
+keywords = ["config", "source"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
